tests/baselines/reference/parserSkippedTokens12.errors.txt
==== tests/cases/compiler/parserSkippedTokens12.ts (6 errors) ====
    \ \ \
    ~
!!! parserSkippedTokens12.ts(1,1): error TS1001: Unexpected character "\".
    ~
!!! parserSkippedTokens12.ts(1,1): error TS1008: Unexpected token; 'module, class, interface, enum, import or statement' expected.
      ~
!!! parserSkippedTokens12.ts(1,3): error TS1001: Unexpected character "\".
      ~
!!! parserSkippedTokens12.ts(1,3): error TS1008: Unexpected token; 'module, class, interface, enum, import or statement' expected.
        ~
!!! parserSkippedTokens12.ts(1,5): error TS1001: Unexpected character "\".
        ~
!!! parserSkippedTokens12.ts(1,5): error TS1008: Unexpected token; 'module, class, interface, enum, import or statement' expected.